tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_show_details.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Repository: showable-repo
  Type: git-marketplace
  Priority: 5
  URL: https://github.com/org/repo.git
