tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_test_connectivity.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[INFO] Testing repository: testable-repo...
[TIMESTAMP] DEBUG hyper::client::connect::http: connecting to [VERSION].1:46487
[TIMESTAMP] DEBUG hyper::client::connect::http: connected to [VERSION].1:46487
[TIMESTAMP] DEBUG hyper::proto::h1::io: flushed 108 bytes
[TIMESTAMP] DEBUG hyper::proto::h1::io: parsed 3 headers
[TIMESTAMP] DEBUG hyper::proto::h1::conn: incoming body is content-length (2 bytes)
[TIMESTAMP] DEBUG hyper::proto::h1::conn: incoming body completed
[TIMESTAMP] DEBUG hyper::client::pool: pooling idle connection for ("http", [VERSION].1:46487)
[OK] Repository 'testable-repo' is accessible (0 skills found)
