tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sources_update_branch.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Updated repository: updateable-repo
