tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sync_custom_files.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Synced 1 skill(s) to CUSTOM.md
