tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sync_project_vs_global.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Synced 1 skill(s) to AGENTS.md
[OK] Updated .cursor/rules/skills.mdc
