tests/cli/snapshots/cli_tests__cli__snapshot_helpers__sync_with_existing_agents_md.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[TIMESTAMP] DEBUG fastskill::cli::config: Using skills_directory from skill-project.toml: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing FastSkill service v[VERSION]
[TIMESTAMP]  INFO fastskill::storage::filesystem: Initialized filesystem storage at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing service components...
[TIMESTAMP]  INFO fastskill::storage::filesystem: Filesystem storage initialized at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Auto-indexed 1 skills from filesystem
[TIMESTAMP]  INFO fastskill::core::service: Service initialization complete
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Resolved metadata file: [TEMP_DIR]
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Agent key: None
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Override path: None
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Agents file: [TEMP_DIR]
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Found 1 installed skills
[TIMESTAMP] DEBUG fastskill::cli::utils::agents_md: Parsed 1 skills from AGENTS.md
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Current skill IDs in AGENTS.md: {"old-skill": true}
[TIMESTAMP] DEBUG fastskill::cli::commands::sync: Selected 1 skills
[OK] Synced 1 skill(s) to AGENTS.md
